samples/_failures_safe/1761473816_64c719_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_225d1ea5.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_225d1ea5.c:154:20: error: missing terminating " character
  154 |             printf("Vertex %d: %
      |                    ^~~~~~~~~~~~~
./samples/SAFE/__tmp_225d1ea5.c:154:13: error: expected expression at end of input
  154 |             printf("Vertex %d: %
      |             ^~~~~~
./samples/SAFE/__tmp_225d1ea5.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_225d1ea5.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_225d1ea5.c:154:13: error: expected declaration or statement at end of input
